[VK] Check for empty occluded bounds in AppListFolderView.

In AppListFolderView, we currently use the virtual keyboard occluded
bounds without checking if it's empty first. This means that when we
use the floating keyboard, which has empty occluded bounds,
AppListFolderView thinks that the occluded y position is 0, so it
overscrolls the view off the screen.

We change the code to only overscroll if the occluded bounds are not
empty.

Bug: 860087
Change-Id: Ibab4170a73932c587bb87ef368a1682885189429
Reviewed-on: https://chromium-review.googlesource.com/1124733
Reviewed-by: calamity <calamity@chromium.org>
Commit-Queue: Darren Shen <shend@chromium.org>
Cr-Commit-Position: refs/heads/master@{#572465}
Former-commit-id: 2ef3038de5350cefacba396b74c084f164b5cb90